# benchmarks

./: CHANGELOG.rst  CMakeLists.txt  Doxyfile  README.md  catkin.cmake  mainpage.dox  manifest.xml  package.xml  rosbuild.cmake
datasets/: env_benchmark.test  table_planning.env  table_planning.test
include/benchmarks/: CollisionCheckingBenchmark.h  DataTypes.h  DataUtils.h  KinematicBenchmarks.h  KinematicBenchmarks.h~  YamlUtils.h
include/collision_checking/: CollisionCheckingBenchmark.h
moveit_benchmarks/: CMakeLists.txt  package.xml
or_benchmarks/: CMakeLists.txt  README.md  manifest.xml  package.xml
or_benchmarks/datasets/: env_benchmark.test
or_benchmarks/include/benchmarks/: CheckerResultModule.h  DataTypes.h  DataUtils.h  KinematicBenchmarks.h  YamlUtils.h
or_benchmarks/scripts/: analyze.py  run_collison_benchmark_fromfile.py  run_kinematics_benchmark.py
or_benchmarks/src/: BenchmarksModule.cpp  CheckerResultModule.cpp  MoveItModule.cpp  run_benchmark.cpp
prpy_benchmarks/: CMakeLists.txt  README.md  package.xml  setup.py
prpy_benchmarks/benchmarks/: prpy_log.yaml  table_benchmarks.yaml
prpy_benchmarks/example/: evaluate_collisionchecks_example.py  execute_benchmarks_example.py  generate_log.py  generate_log_example.py  log-20170630-114019.878484.yaml
prpy_benchmarks/planners/: cbirrt_default.yaml  snap_default.yaml
prpy_benchmarks/queries/: table_query_0.yaml
prpy_benchmarks/scripts/: generate_table_queries.py  load_prpy_log.py  run_benchmark.py  run_benchmarks.py
prpy_benchmarks/src/prpy_benchmarks/: __init__.py  benchmark_utils.py  planner.py  query.py  result.py
pythonsrc/collision_checking/: run_benchmark.py
scripts/: analyze.py  analyze_planning_benchmarks.py  env_benchmark.test  run_all.py  run_all_collision_benchmarks.py  run_benchmark.py  run_collision_benchmark.py  run_kinematics_benchmark.py  run_planning_benchmark.py
src/: CollisionCheckingBenchmark.cpp  CollisionCheckingModule.cpp  DataUtils.cpp  KinematicBenchmarks.cpp  MoveItModule.cpp  memory_leak.cpp
