<?xml version="1.0"?>
<package>
  <name>or_benchmarks</name>
  <version>0.2.0</version>
  <description>
    Benchmarks for measuring the performance of OpenRAVE.
  </description>
  <url type="repository">https://github.com/personalrobotics/or_benchmarks</url>
  <maintainer email="jeking@cs.cmu.edu">Jennifer King</maintainer>
  <author email="jeking@cs.cmu.edu">Jennifer King</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>openrave</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>herbpy</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-argparse</run_depend>
</package>
