<?xml version="1.0"?>
<package>
  <name>moveit_benchmarks</name>
  <version>1.0.0</version>
  <description>
    Benchmarks for measuring the performance of MoveIt.
  </description>
  <url type="repository">https://github.com/personalrobotics/benchmarks</url>
  <maintainer email="jeking@cs.cmu.edu">Jennifer King</maintainer>
  <author email="jeking@cs.cmu.edu">Jennifer King</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-argparse</run_depend>
  <run_depend>palettable</run_depend>
</package>