<?xml version="1.0"?>
<package>
  <name>prpy_benchmarks</name>
  <version>1.0.0</version>
  <description>
    Benchmarks for measuring the performance of OpenRAVE.
  </description>
  <url type="repository">https://github.com/personalrobotics/prpy_benchmarks</url>
  <maintainer email="jeking@cs.cmu.edu">Jennifer King</maintainer>
  <author email="jeking@cs.cmu.edu">Jennifer King</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>or_stub_checker</run_depend>
  <run_depend>or_benchmarks</run_depend>
  <run_depend>prpy</run_depend>
</package>
